@@ -1,15 +1,22 @@
 package com.develhope.spring.services.implementations;
 
 import com.develhope.spring.dtos.requests.AdvertisementRequestDTO;
+import com.develhope.spring.dtos.requests.AdvertisementUpdateDTO;
 import com.develhope.spring.dtos.responses.AdvertisementResponseDTO;
 import com.develhope.spring.entities.Advertisement;
+import com.develhope.spring.entities.Advertiser;
+import com.develhope.spring.exceptions.EmptyResultException;
+import com.develhope.spring.exceptions.NegativeIdException;
 import com.develhope.spring.repositories.AdvertisementRepository;
 import com.develhope.spring.repositories.AdvertiserRepository;
+import com.develhope.spring.services.UniversalFieldUpdater;
 import com.develhope.spring.services.interfaces.AdvertisementService;
+import jakarta.persistence.EntityNotFoundException;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.lang.reflect.InvocationTargetException;
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.List;
@@ -20,119 +27,221 @@ import java.util.stream.Collectors;
 public class AdvertisementServiceImpl implements AdvertisementService {
 
     private final ModelMapper modelMapper;
-    private final AdvertisementRepository advRepository;
+    private final AdvertisementRepository advertisementRepository;
     private final AdvertiserRepository advertiserRepository;
 
     @Autowired
-    public AdvertisementServiceImpl(ModelMapper modelMapper, AdvertisementRepository advRepository, AdvertiserRepository advertiserRepository) {
+    public AdvertisementServiceImpl(ModelMapper modelMapper, AdvertisementRepository advertisementRepository, AdvertiserRepository advertiserRepository) {
         this.modelMapper = modelMapper;
-        this.advRepository = advRepository;
+        this.advertisementRepository = advertisementRepository;
         this.advertiserRepository = advertiserRepository;
     }
 
     @Override
-    public Optional<AdvertisementResponseDTO> createAdvertisement(AdvertisementRequestDTO request, Long advertiserID) {
-        return advertiserRepository.findById(advertiserID).map(advertiser -> {
-            Advertisement newAdv = modelMapper.map(request, Advertisement.class);
-            newAdv.setAdvertiser(advertiser);
-            initializeAdvertisement(newAdv);
-            advRepository.saveAndFlush(newAdv);
+    public AdvertisementResponseDTO createAdvertisement(AdvertisementRequestDTO request) {
 
-            AdvertisementResponseDTO response = modelMapper.map(newAdv, AdvertisementResponseDTO.class);
-            setCalculableFieldsAdvViewDTO(response);
-            return response;
-        });
+        if (request.getAdvertiserUserId() < 0) {
+            throw new NegativeIdException("[Creation failed] Advertiser ID cannot be negative. Now: " + request.getAdvertiserUserId());
+        }
+
+        Optional<Advertiser> advertiser = advertiserRepository.findById(request.getAdvertiserUserId()); //todo update
+
+        if (advertiser.isEmpty()) {
+            throw new EntityNotFoundException("[Creation failed] Advertiser with ID " + request.getAdvertiserUserId() +
+                    " not found in the database");
+        }
+
+        Advertisement newAdvertisement = modelMapper.map(request, Advertisement.class);
+
+        newAdvertisement.setAdvertiser(advertiser.get());
+        initializeAdvertisement(newAdvertisement);
+
+        var advSaved = advertisementRepository.saveAndFlush(newAdvertisement);
+
+        var responseDTO = modelMapper.map(newAdvertisement, AdvertisementResponseDTO.class);
+
+        setCalculableFieldsAdvViewDTO(responseDTO);
+
+        return responseDTO;
     }
 
     @Override
-    public Optional<AdvertisementResponseDTO> updateAdvertisement(AdvertisementRequestDTO request, Long id) {
-        return advRepository.findById(id).map(adv -> {
-            modelMapper.map(request, adv);
-            controlAndEnableAdvertisement(adv);
-            advRepository.saveAndFlush(adv);
+    public AdvertisementResponseDTO updateAdvertisement(AdvertisementUpdateDTO request, Long id) {
 
-            AdvertisementResponseDTO response = modelMapper.map(adv, AdvertisementResponseDTO.class);
-            setCalculableFieldsAdvViewDTO(response);
+        if (id < 0) {
+            throw new NegativeIdException("[Creation failed] Advertisement ID cannot be negative. Now: " + id);
+        }
 
-            return response;
-        });
+        Optional<Advertisement> advertisement = advertisementRepository.findById(id);
+
+        if (advertisement.isEmpty()) {
+            throw new EntityNotFoundException("[Update failed] Advertisement with ID " + id +
+                    " not found in the database");
+        }
+
+        var toUpdate = advertisement.get();
+
+        try {
+            UniversalFieldUpdater.checkFieldsAndUpdate(request, toUpdate);
+        } catch (InvocationTargetException e) {
+            throw new RuntimeException(e);
+        } catch (IllegalAccessException e) {
+            throw new RuntimeException(e);
+        }
+
+        initializeAdvertisement(toUpdate);
+
+        var updated = advertisementRepository.saveAndFlush(toUpdate);
+        var responseDto = modelMapper.map(updated, AdvertisementResponseDTO.class);
+
+        setCalculableFieldsAdvViewDTO(responseDto);
+
+        return responseDto;
     }
 
     @Override
-    public Optional<AdvertisementResponseDTO> displayAdvertisementToUser(Long id) {
-        return advRepository.findById(id).map(adv -> {
+    public AdvertisementResponseDTO displayAdvertisementToUser(Long id) {
+
+        if (id < 0) {
+            throw new NegativeIdException("[Search failed] Advertisement ID cannot be negative. Now: " + id);
+        }
+
+        return advertisementRepository.findById(id).map(adv -> {
+
             incrementActualViews(adv);
-            advRepository.saveAndFlush(adv);
-            AdvertisementResponseDTO found = modelMapper.map(adv, AdvertisementResponseDTO.class);
-            setCalculableFieldsAdvViewDTO(found);
+            adv = advertisementRepository.saveAndFlush(adv);
 
-            return found;
-        });
+            var responseDTO = modelMapper.map(adv, AdvertisementResponseDTO.class);
+            setCalculableFieldsAdvViewDTO(responseDTO);
+
+            return responseDTO;
+
+        }).orElseThrow(() -> new EntityNotFoundException("Advertisement with ID " + id +
+                " not found in the database"));
     }
 
     @Override
     public List<AdvertisementResponseDTO> getAllAdvertisements() {
-        return advRepository.findAll().stream()
+
+        var advList = advertisementRepository.findAll()
+                .stream()
                 .map(adv -> {
-                    AdvertisementResponseDTO found = modelMapper.map(adv, AdvertisementResponseDTO.class);
-                    setCalculableFieldsAdvViewDTO(found);
-                    return found;
-                }).collect(Collectors.toList());
+                    var responseDTO = modelMapper.map(adv, AdvertisementResponseDTO.class);
+                    setCalculableFieldsAdvViewDTO(responseDTO);
+
+                    return responseDTO;
+
+                }).toList();
+
+        if (advList.isEmpty()) {
+            throw new EmptyResultException("[Search failed] No advertisements found in the database.");
+        }
+
+        return advList;
     }
 
     @Override
-    public Optional<AdvertisementResponseDTO> getAdvertisementById(Long id) {
-        return advRepository.findById(id).map(adv -> {
-            AdvertisementResponseDTO found = modelMapper.map(adv, AdvertisementResponseDTO.class);
-            setCalculableFieldsAdvViewDTO(found);
-            return found;
-        });
+    public AdvertisementResponseDTO getAdvertisementById(Long id) {
+
+        if (id < 0) {
+            throw new NegativeIdException("[Search failed] Advertisement ID cannot be negative. Now: " + id);
+        }
+
+        return advertisementRepository.findById(id).map(adv -> {
+
+            var responseDTO = modelMapper.map(adv, AdvertisementResponseDTO.class);
+            setCalculableFieldsAdvViewDTO(responseDTO);
+
+            return responseDTO;
+
+        }).orElseThrow(() -> new EntityNotFoundException("[Search failed] Advertisement with ID " + id +
+                " not found in the database"));
     }
 
     @Override
     public List<AdvertisementResponseDTO> getAllByActive(Boolean active) {
-        List<Advertisement> ads = active ? advRepository.findByActiveTrue() : advRepository.findByActiveFalse();
-        return ads.stream()
+
+        List<Advertisement> ads = active ? advertisementRepository.findByActiveTrue() : advertisementRepository.findByActiveFalse();
+
+        var advertisements =  ads.stream()
                 .map(adv -> {
-                    AdvertisementResponseDTO found = modelMapper.map(adv, AdvertisementResponseDTO.class);
-                    setCalculableFieldsAdvViewDTO(found);
-                    return found;
-                }).collect(Collectors.toList());
+                    var responseDTO = modelMapper.map(adv, AdvertisementResponseDTO.class);
+                    setCalculableFieldsAdvViewDTO(responseDTO);
+
+                    return responseDTO;
+
+                }).toList();
+
+        if (advertisements.isEmpty()){
+            throw new EmptyResultException("[Search failed] No advertisements(active = " + active +
+                    ") found in the database.");
+        } else {
+            return advertisements;
+        }
     }
 
     @Override
-    public Optional<Advertisement> deleteAdvertisement(Long id) {
-        return advRepository.findById(id).map(advToDelete -> {
-            advRepository.deleteById(id);
-            return advToDelete;
-        });
+    public AdvertisementResponseDTO deleteAdvertisement(Long id) {
+
+        if (id < 0) {
+            throw new NegativeIdException("[Delete failed] Advertisement ID cannot be negative. Now: " + id);
+        }
+
+        return advertisementRepository.findById(id).map(advToDelete -> {
+
+            advertisementRepository.deleteById(id);
+            var responseDTO = modelMapper.map(advToDelete, AdvertisementResponseDTO.class);
+            setCalculableFieldsAdvViewDTO(responseDTO);
+
+            return responseDTO;
+
+        }).orElseThrow(() -> new EntityNotFoundException("[Delete failed] Advertisement with ID " + id +
+                " not found in the database"));
     }
 
     @Override
     public void deleteAllAdvertisements() {
-        advRepository.deleteAll();
+        advertisementRepository.deleteAll();
     }
 
     @Override
-    public Optional<AdvertisementResponseDTO> enableAdvertisement(Long id) {
-        return advRepository.findById(id).map(adv -> {
+    public AdvertisementResponseDTO enableAdvertisement(Long id) {
+
+        if (id < 0) {
+            throw new NegativeIdException("[Activation failed] Advertisement ID cannot be negative. Now: " + id);
+        }
+
+        return advertisementRepository.findById(id).map(adv -> {
+
             adv.setActive(true);
-            advRepository.saveAndFlush(adv);
+            adv = advertisementRepository.saveAndFlush(adv);
             AdvertisementResponseDTO response = modelMapper.map(adv, AdvertisementResponseDTO.class);
             setCalculableFieldsAdvViewDTO(response);
+
             return response;
-        });
+
+        }).orElseThrow(() -> new EntityNotFoundException("[Activation failed] Advertisement with ID " + id +
+                " not found in the database"));
     }
 
     @Override
-    public Optional<AdvertisementResponseDTO> disableAdvertisement(Long id) {
-        return advRepository.findById(id).map(adv -> {
+    public AdvertisementResponseDTO disableAdvertisement(Long id) {
+
+        if (id < 0) {
+            throw new NegativeIdException("[Deactivation failed] Advertisement ID cannot be negative. Now: " + id);
+        }
+
+        return advertisementRepository.findById(id).map(adv -> {
+
             adv.setActive(false);
-            advRepository.saveAndFlush(adv);
+            adv = advertisementRepository.saveAndFlush(adv);
             AdvertisementResponseDTO response = modelMapper.map(adv, AdvertisementResponseDTO.class);
             setCalculableFieldsAdvViewDTO(response);
+
             return response;
-        });
+
+        }).orElseThrow(() -> new EntityNotFoundException("[Deactivation failed] Advertisement with ID " + id +
+                " not found in the database"));
     }
 
     private void controlAndEnableAdvertisement(Advertisement advertisement) {
