@@ -1,28 +1,31 @@
 package com.develhope.spring.services.implementations;
 
 import com.develhope.spring.dtos.requests.SubscriptionRequestDTO;
+import com.develhope.spring.dtos.requests.SubscriptionUpdateDTO;
 import com.develhope.spring.dtos.responses.SubscriptionResponseDTO;
 import com.develhope.spring.dtos.responses.SubscriptionWithoutListenerDTO;
+import com.develhope.spring.entities.Listener;
 import com.develhope.spring.entities.Subscription;
+import com.develhope.spring.exceptions.EmptyResultException;
+import com.develhope.spring.exceptions.NegativeIdException;
 import com.develhope.spring.repositories.ListenerRepository;
 import com.develhope.spring.repositories.SubscriptionRepository;
+import com.develhope.spring.services.UniversalFieldUpdater;
 import com.develhope.spring.services.interfaces.SubscriptionService;
+import jakarta.persistence.EntityNotFoundException;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.lang.reflect.InvocationTargetException;
 import java.text.DecimalFormat;
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class SubscriptionServiceImpl implements SubscriptionService {
-
-    //TODO ADD VALIDATION(VALIDATION DIPEND. & EXCEPTION HANDLER)
-    //TODO CHANGE USER TI LISTENER!
 
     private final SubscriptionRepository subscrRepository;
     private final ListenerRepository listenerRepository;
@@ -40,97 +43,143 @@ public class SubscriptionServiceImpl implements SubscriptionService {
     }
 
     @Override
-    public Optional<SubscriptionResponseDTO> getSubscriptionById(Long id) {
+    public SubscriptionResponseDTO getSubscriptionById(Long id) {
+
+        if (id < 0){
+            throw new NegativeIdException(
+                    "[Search failed] Subscription ID cannot be negative. Now: " + id);
+        }
 
         return subscrRepository.findById(id).map(subscription -> {
             SubscriptionResponseDTO response = modelMapper.map(subscription, SubscriptionResponseDTO.class);
             setCalculableFieldsViewDTO(response);
 
             return response;
-        });
+        }).orElseThrow(() -> new EntityNotFoundException("[Search failed] Subscription with ID " + id +
+                " not found in the database"));
     }
 
     @Override
     public List<SubscriptionResponseDTO> getAllSubscriptions() {
 
-        return subscrRepository.findAll().stream().map(subscription -> {
+        var subscriptions = subscrRepository.findAll().stream().map(subscription -> {
             SubscriptionResponseDTO found = modelMapper.map(subscription, SubscriptionResponseDTO.class);
             setCalculableFieldsViewDTO(found);
 
             return found;
 
-        }).collect(Collectors.toList());
+        }).toList();
+
+        if (subscriptions.isEmpty()) {
+            throw new EmptyResultException("[Search failed] No subscriptions found in the database.");
+        } else {
+            return subscriptions;
+        }
     }
 
     @Override
     public List<SubscriptionResponseDTO> getAllByActive(Boolean active) {
 
-        if (active) {
-            return subscrRepository.findByActiveTrue().stream().map(subscription -> {
-                SubscriptionResponseDTO found = modelMapper.map(subscription, SubscriptionResponseDTO.class);
-                setCalculableFieldsViewDTO(found);
+        List<Subscription> subscriptions = active ? subscrRepository.findByActiveTrue() :
+                subscrRepository.findByActiveFalse();
 
-                return found;
+        var foundByActive = subscriptions.stream().map(subscription -> {
 
-            }).collect(Collectors.toList());
+            var responseDTO = modelMapper.map(subscription, SubscriptionResponseDTO.class);
+            setCalculableFieldsViewDTO(responseDTO);
+
+            return responseDTO;
+
+        }).toList();
+
+        if (foundByActive.isEmpty()) {
+            throw new EmptyResultException("[Search failed] No subscriptions(active = " + active +
+                    ") found in the database.");
         } else {
-            return subscrRepository.findByActiveFalse().stream().map(subscription -> {
-                SubscriptionResponseDTO found = modelMapper.map(subscription, SubscriptionResponseDTO.class);
-                setCalculableFieldsViewDTO(found);
-
-                return found;
-
-            }).collect(Collectors.toList());
+            return foundByActive;
         }
     }
 
     @Override
-    public Optional<SubscriptionResponseDTO> createSubscription(SubscriptionRequestDTO request, Long userID) {
-        return listenerRepository.findById(userID).map(listener -> {
+    public SubscriptionResponseDTO createSubscription(SubscriptionRequestDTO request) {
 
-            Subscription toSave = modelMapper.map(request, Subscription.class);
+        if (request.getListenerId() < 0){
+            throw new NegativeIdException(
+                    "[Creation failed] Listener ID cannot be negative. Now: " + request.getListenerId());
+        }
 
-            toSave.setListener(listener);
-            toSave.setTotalPrice(toSave.getType().getTotalPrice());
-            setStartSetEnd(toSave);
-            controlAndEnableSubscription(toSave);
+        Optional<Listener> listener = listenerRepository.findById(request.getListenerId());
 
-            Subscription saved = subscrRepository.saveAndFlush(toSave);
-            SubscriptionResponseDTO response = modelMapper.map(saved, SubscriptionResponseDTO.class);
-            setCalculableFieldsViewDTO(response);
-            return response;
+        if (listener.isEmpty()){
+            throw new EntityNotFoundException("[Creation failed] Listener with ID " + request.getListenerId() + " not found in the database");
+        }
 
-        });
+        Subscription toSave = modelMapper.map(request, Subscription.class);
 
+        toSave.setListener(listener.get());
+        toSave.setTotalPrice(toSave.getType().getTotalPrice());
+        setStartSetEnd(toSave);
+        controlAndEnableSubscription(toSave);
+
+        var subscrSaved = subscrRepository.saveAndFlush(toSave);
+        var responseDTO = modelMapper.map(subscrSaved, SubscriptionResponseDTO.class);
+
+        setCalculableFieldsViewDTO(responseDTO);
+
+        return responseDTO;
     }
 
     @Override
-    public Optional<SubscriptionResponseDTO> updateSubscription(Long id, SubscriptionRequestDTO request) {
+    public SubscriptionResponseDTO updateSubscription(Long id, SubscriptionUpdateDTO request) {
+
+        if (id < 0){
+            throw new NegativeIdException(
+                    "[Update failed] Subscription ID cannot be negative. Now: " + id);
+        }
 
         return subscrRepository.findById(id).map(subscription -> {
 
-            if (incomingDtoIsValid(request)) {
-                modelMapper.map(request, subscription);
+            if (incomingUpdateDtoIsValid(request)){
+                try {
+                    UniversalFieldUpdater.checkFieldsAndUpdate(request, subscription);
+                } catch (InvocationTargetException e) {
+                    throw new RuntimeException(e);
+                } catch (IllegalAccessException e) {
+                    throw new RuntimeException(e);
+                }
                 setStartSetEnd(subscription);
 
-                subscrRepository.saveAndFlush(subscription);
+                subscription = subscrRepository.saveAndFlush(subscription);
                 SubscriptionResponseDTO response = modelMapper.map(subscription, SubscriptionResponseDTO.class);
                 setCalculableFieldsViewDTO(response);
 
                 return response;
-            } else throw new IllegalArgumentException("Invalid subscription type. Allowed types are: ANNUAL, HALF_YEAR, MONTHLY.");
+            } else {
+                throw new IllegalArgumentException(
+                        "[Update failed] Invalid subscription type. Allowed types are: ANNUAL, HALF_YEAR, MONTHLY.");
+            }
 
-        });
+        }).orElseThrow(() -> new EntityNotFoundException("[Update failed] Subscription with ID " + id +
+                " not found in the database"));
     }
 
     @Override
-    public Optional<Subscription> deleteSubscriptionById(Long id) {
+    public SubscriptionResponseDTO deleteSubscriptionById(Long id) {
+
+        if (id < 0) {
+            throw new NegativeIdException("[Delete failed] Subscription ID cannot be negative. Now: " + id);
+        }
 
         return subscrRepository.findById(id).map(subscription -> {
             subscrRepository.deleteById(id);
+            var responseDTO = modelMapper.map(subscription, SubscriptionResponseDTO.class);
+            setCalculableFieldsViewDTO(responseDTO);
 
-            return subscription;
-        });
+            return responseDTO;
+
+        }).orElseThrow(() -> new EntityNotFoundException("[Delete failed] Subscription with ID " + id +
+                " not found in the database"));
+
     }
 
     @Override
@@ -139,33 +188,48 @@ public class SubscriptionServiceImpl implements SubscriptionService {
     }
 
     @Override
-    public Optional<SubscriptionResponseDTO> enableSubscription(Long id) {
+    public SubscriptionResponseDTO enableSubscription(Long id) {
 
-        return subscrRepository.findById(id).map(subscr -> {
+        if (id < 0){
+            throw new NegativeIdException(
+                    "[Activation failed] Subscription ID cannot be negative. Now: " + id);
+        }
 
-            subscr.setActive(true);
-            subscr = subscrRepository.saveAndFlush(subscr);
+        return subscrRepository.findById(id).map(subscription -> {
 
-            SubscriptionResponseDTO response = modelMapper.map(subscr, SubscriptionResponseDTO.class);
-            setCalculableFieldsViewDTO(response);
+            subscription.setActive(true);
+            subscription = subscrRepository.saveAndFlush(subscription);
 
-            return response;
-        });
+            var responseDTO = modelMapper.map(subscription, SubscriptionResponseDTO.class);
+            setCalculableFieldsViewDTO(responseDTO);
+
+            return responseDTO;
+
+        }).orElseThrow(() -> new EntityNotFoundException("[Activation failed] Subscription with ID " + id +
+                " not found in the database"));
     }
 
 
     @Override
-    public Optional<SubscriptionResponseDTO> disableSubscription(Long id) {
-        return subscrRepository.findById(id).map(subscr -> {
+    public SubscriptionResponseDTO disableSubscription(Long id) {
 
-            subscr.setActive(false);
-            subscr = subscrRepository.saveAndFlush(subscr);
+        if (id < 0){
+            throw new NegativeIdException(
+                    "[Deactivation failed] Subscription ID cannot be negative. Now: " + id);
+        }
 
-            SubscriptionResponseDTO response = modelMapper.map(subscr, SubscriptionResponseDTO.class);
-            setCalculableFieldsViewDTO(response);
+        return subscrRepository.findById(id).map(subscription -> {
 
-            return response;
-        });
+            subscription.setActive(false);
+            subscription = subscrRepository.saveAndFlush(subscription);
+
+            var responseDTO = modelMapper.map(subscription, SubscriptionResponseDTO.class);
+            setCalculableFieldsViewDTO(responseDTO);
+
+            return responseDTO;
+
+        }).orElseThrow(() -> new EntityNotFoundException("[Deactivation failed] Subscription with ID " + id +
+                " not found in the database"));
     }
 
 
@@ -232,7 +296,7 @@ public class SubscriptionServiceImpl implements SubscriptionService {
         withoutListenerDTO.setPricePerMonth(calculatePricePerMonth(withoutListenerDTO));
     }
 
-    private boolean incomingDtoIsValid(SubscriptionRequestDTO request) {
+    private boolean incomingUpdateDtoIsValid(SubscriptionUpdateDTO request) {
 
         return request.getType() == Subscription.SubscrType.ANNUAL ||
                 request.getType() == Subscription.SubscrType.HALF_YEAR ||
@@ -243,7 +307,6 @@ public class SubscriptionServiceImpl implements SubscriptionService {
     public void invokeFromOutsideSetCalculableFieldsDTO(SubscriptionWithoutListenerDTO withoutListenerDTO) {
         setCalculableFieldsViewDTO(withoutListenerDTO);
     }
-
 
 }
 
